# CrimsonRegiment

./: README.md
led-cli/: CMakeLists.txt
led-cli/src/: CRLEDPacket.hpp  cr_led_cli.cpp
led-client-deamon/: CMakeLists.txt
led-client-deamon/src/: CRLEDClientConfigFile.cpp  CRLEDClientConfigFile.hpp  CRLEDPacket.hpp  CRLEDSequenceFile.cpp  CRLEDSequenceFile.hpp  ClientEvents.cpp  ClientEvents.hpp  ClientMain.cpp  ClientMain.hpp  EventLoop.cpp  EventLoop.hpp  LEDSequencer.cpp  LEDSequencer.hpp  client.cpp  ledDriver.cpp  ledDriver.hpp
led-rtmidi-ctrld/: CMakeLists.txt
led-rtmidi-ctrld/init.d/: cr-led-rtmidi-ctrld
led-rtmidi-ctrld/src/: CRLEDConfigFile.cpp  CRLEDConfigFile.hpp  CRLEDPacket.cpp  midi_unicast.cpp
led-web-monitor/: CMakeLists.txt
led-web-monitor/src/: CRLEDConfigFile.cpp  CRLEDResource.cpp  CRLEDResource.hpp  HNRESTResource.cpp  RootResource.cpp  WebMonitor.cpp  hnode-rest.hpp
setup-files/client/etc/: dhcpcd.conf  ptpd.conf
setup-files/client/etc/crled/: client.conf  sequence.xml
setup-files/client/etc/init.d/: cr-led-clientd  ptpd
setup-files/client/etc/network/: interfaces
setup-files/debs/: ptpd_2.3.1-debian1-1_armhf.deb
setup-files/keypad/etc/: ptpd.conf
setup-files/keypad/etc/init.d/: cr-led-rtmidi-ctrld
setup-files/keypad/lib/dhcpcd/dhcpcd-hooks/: 51-ptpd.conf
tools/: pingCheck  updateClient  updateClient.py  updateNode.py  updateSequence.py
